--- a/assignment2.html
+++ b/assignment2.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sylhet Doc</title>
+    <script src="https://kit.fontawesome.com/4eee2a31ad.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -16,18 +17,20 @@
 
     <section class="two">
         <div class="one">
-            <h1><b>Greatest Show</b> </h1>
-            <h1>On The </h1>
-            <h1>Earth!!</h1>
-            <p style="margin-bottom:10% ;">The FIFA World Cup is the most watched tournament in football (soccer). The
+            <h1 style="padding-left:20px"><b>Greatest Show</b> </h1>
+            <h1 style="padding-left:20px">On The </h1>
+            <h1 style="padding-left:20px">Earth!!</h1>
+            <p style="margin-bottom:10%;padding-left:20px ;">The FIFA World Cup is the most watched tournament in
+                football (soccer). The
                 Fédération Internationale de
                 Football Association (FIFA) organises the World Cup every four years. More people watch the World Cup
                 finals
                 than any other sporting event in the world—even more people than the Olympic Games.[source?]The most
                 successful team has been Brazil because they have won the competition 5 times.</p>
 
-            <a class="link1" target="_blank"
+            <a style="margin-left:10px;margin-bottom: 20px;" class="link1" target="_blank"
                 href="https://www.livesoccertv.com/competitions/international/world-cup/">Watch Live
+                <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
             </a>
 
         </div>
