--- a/assignment2.html
+++ b/assignment2.html
@@ -39,6 +39,29 @@
         </div>
     </section>
 
+    <section>
+        <div class="cards">
+            <div class="image">
+                <img src="images/brazil.jpg" alt="">
+
+            </div>
+            <div class="title">
+                <h1>
+                    Brazil vs Portugal
+                </h1>
+
+            </div>
+            <div class="des">
+                <p><b>watch now Brazil vs Portugal</b></p>
+                <button>
+                    watch now
+                </button>
+
+            </div>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
