--- a/assignment2.html
+++ b/assignment2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,29 +40,182 @@
         </div>
     </section>
 
-    <section>
-        <div class="cards">
-            <div class="image">
-                <img src="images/brazil.jpg" alt="">
+
+    <section class="box">
+        <div class="main">
+
+            <div class="cards">
+                <div class="image">
+                    <img src="images/brazil.jpg" alt="">
+
+                </div>
+                <div class="title">
+                    <h1>
+                        Brazil vs Portugal
+                    </h1>
+
+                </div>
+                <div class="des">
+                    <p><b>watch now Brazil vs Portugal</b></p>
+                    <button class="link1">
+                        watch now
+                    </button>
+
+                </div>
 
             </div>
-            <div class="title">
-                <h1>
-                    Brazil vs Portugal
-                </h1>
+
+
+
+            <!-- cards -->
+            <div class="cards">
+                <div class="image">
+                    <img src="images/rsz_chile.jpg" alt="">
+
+                </div>
+                <div class="title">
+                    <h1>
+                        Argentina vs Chile
+                    </h1>
+
+                </div>
+                <div class="des">
+                    <p><b>watch now Argentina vs Chile</b></p>
+                    <button class="link1">
+                        watch now
+                    </button>
+
+                </div>
 
             </div>
-            <div class="des">
-                <p><b>watch now Brazil vs Portugal</b></p>
-                <button>
-                    watch now
-                </button>
+
+
+            <!-- cards -->
+            <div class="cards">
+                <div class="image">
+                    <img src="images/rsz_japan.jpg" alt="">
+
+                </div>
+                <div class="title">
+                    <h1>
+                        Japan vs Korea
+                    </h1>
+
+                </div>
+                <div class="des">
+                    <p><b>watch now Japan vs Korea</b></p>
+                    <button class="link1">
+                        watch now
+                    </button>
+
+                </div>
 
             </div>
 
-        </div>
+            <!-- cards -->
+            <div class="cards">
+                <div class="image">
+                    <img src="images/france.jpg" alt="">
+
+                </div>
+                <div class="title">
+                    <h1>
+                        France vs Spain
+                    </h1>
+
+                </div>
+                <div class="des">
+                    <p><b>watch now France vs Spain</b></p>
+                    <button class="link1">
+                        watch now
+                    </button>
+
+                </div>
+
+            </div>
+
+            <!-- cards -->
+            <div class="cards">
+                <div class="image">
+                    <img src="images/pre.jpg" alt="">
+
+                </div>
+                <div class="title">
+                    <h1>
+                        Talk Show
+                    </h1>
+
+                </div>
+                <div class="des">
+                    <p><b>watch now Talk Show</b></p>
+                    <button class="link1">
+                        watch now
+                    </button>
+
+                </div>
+
+            </div>
+
+
+            <!-- cards -->
+            <div class="cards">
+                <div class="image">
+                    <img src="images/rsz_goal.jpg" alt="">
+
+                </div>
+                <div class="title">
+                    <h1>
+                        Goal Review
+                    </h1>
+
+                </div>
+                <div class="des">
+                    <p><b>watch now Goal Reviews</b></p>
+                    <button class="link1">
+                        watch now
+                    </button>
+
+                </div>
+
+            </div>
     </section>
 
+
+
+    </div>
+
+
+
 </body>
+
+
+<footer class="footer">
+    <div class="inner-footer">
+        <div class="social-links">
+            <ul>
+                <li class="social-items"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+
+                <li class="social-items"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+
+                <li class="social-items"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            </ul>
+        </div>
+
+
+        <div class="quick-links">
+            <ul>
+                <li class="quick-items"><a href="#"></a>Home </li>
+                <li class="quick-items"><a href="#"></a>Live Scores </li>
+                <li class="quick-items"><a href="#"></a>WC2022 </li>
+                <li class="quick-items"><a href="#"></a>Stats </li>
+                <li class="quick-items"><a href="#"></a>About us </li>
+            </ul>
+
+
+        </div>
+    </div>
+
+
+</footer>
 
 </html>
