--- a/assignment2.html
+++ b/assignment2.html
@@ -42,6 +42,7 @@
 
 
     <section class="box">
+
         <div class="main">
 
             <div class="cards">
@@ -184,38 +185,34 @@
 
     </div>
 
-
-
 </body>
 
-
-<footer class="footer">
-    <div class="inner-footer">
-        <div class="social-links">
-            <ul>
-                <li class="social-items"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-
-                <li class="social-items"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-
-                <li class="social-items"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-            </ul>
+<footer style="background-color:black;">
+    <h1 style="text-align:center
+     ; color: white;">
+        Goal.com
+    </h1>
+    <hr style="margin-top: 10px; ;" color="black" width="50%">
+    <section class="gg">
+        <div class="gg1">
+            <p style="color:white ;">Contact us</p>
+        </div>
+        <div class="gg1">
+            <p style="color:white ;">Help Line</p>
         </div>
 
-
-        <div class="quick-links">
-            <ul>
-                <li class="quick-items"><a href="#"></a>Home </li>
-                <li class="quick-items"><a href="#"></a>Live Scores </li>
-                <li class="quick-items"><a href="#"></a>WC2022 </li>
-                <li class="quick-items"><a href="#"></a>Stats </li>
-                <li class="quick-items"><a href="#"></a>About us </li>
-            </ul>
-
-
+        <div class="gg1">
+            <p style="color:white ;">Review</p>
         </div>
-    </div>
+
+        <div class="gg1">
+            <p style="color:white ;">Goals</p>
+        </div>
+    </section>
+
 
 
 </footer>
+
 
 </html>
