--- a/assignment2.html
+++ b/assignment2.html
@@ -41,7 +41,27 @@
     </section>
 
 
-    <section class="box">
+
+    <div class="box">
+        <div class="container">
+            <div class="not">
+                <button class="but">Match
+                </button>
+                <BUTton class="but"> Score</BUTton>
+                <BUTton style="background-color: red; color:black;" class="but">Blogs</BUTton>
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
 
         <div class="main">
 
@@ -52,7 +72,7 @@
                 </div>
                 <div class="title">
                     <h1>
-                        Brazil vs Portugal
+                        Bra vs Por
                     </h1>
 
                 </div>
@@ -76,7 +96,7 @@
                 </div>
                 <div class="title">
                     <h1>
-                        Argentina vs Chile
+                        Arg vs Chil
                     </h1>
 
                 </div>
@@ -99,7 +119,7 @@
                 </div>
                 <div class="title">
                     <h1>
-                        Japan vs Korea
+                        Jap vs Kor
                     </h1>
 
                 </div>
@@ -121,7 +141,7 @@
                 </div>
                 <div class="title">
                     <h1>
-                        France vs Spain
+                        Fra vs Spa
                     </h1>
 
                 </div>
@@ -179,20 +199,22 @@
                 </div>
 
             </div>
-    </section>
+            </section>
 
 
 
+        </div>
     </div>
+
 
 </body>
 
-<footer style="background-color:black;">
+<footer style="background-color:black;margin-top:100px ;">
     <h1 style="text-align:center
      ; color: white;">
         Goal.com
     </h1>
-    <hr style="margin-top: 10px; ;" color="black" width="50%">
+    <hr style="margin-top: 10px; color: gray;width: 45%;margin-left:405px ;">
     <section class="gg">
         <div class="gg1">
             <p style="color:white ;">Contact us</p>
@@ -208,7 +230,7 @@
         <div class="gg1">
             <p style="color:white ;">Goals</p>
         </div>
-    </section>
+
 
 
 
