--- a/assignment2.html
+++ b/assignment2.html
@@ -80,6 +80,7 @@
                     <p><b>watch now Brazil vs Portugal</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -104,6 +105,7 @@
                     <p><b>watch now Argentina vs Chile</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -127,8 +129,8 @@
                     <p><b>watch now Japan vs Korea</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
-
                 </div>
 
             </div>
@@ -149,6 +151,7 @@
                     <p><b>watch now France vs Spain</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -171,6 +174,7 @@
                     <p><b>watch now Talk Show</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -194,8 +198,8 @@
                     <p><b>watch now Goal Reviews</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
-
                 </div>
 
             </div>
