--- a/website2.html
+++ b/website2.html
@@ -43,7 +43,7 @@
 
 
     <div class="box">
-        <div class="container">
+        <div style="width:1800px ;" class="container">
             <div class="not">
                 <button class="but">Match
                 </button>
@@ -54,20 +54,11 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-        <div class="main">
+        <div style="margin-left:10% ;" class="main">
 
             <div class="cards">
                 <div class="image">
-                    <img src="images/brazil.jpg" alt="">
+                    <img src="images/bra2.jpg" alt="">
 
                 </div>
                 <div class="title">
@@ -80,6 +71,7 @@
                     <p><b>watch now Brazil vs Portugal</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -91,12 +83,12 @@
             <!-- cards -->
             <div class="cards">
                 <div class="image">
-                    <img src="images/rsz_chile.jpg" alt="">
+                    <img src="images/arg2.jpg" alt="">
 
                 </div>
                 <div class="title">
                     <h1>
-                        Arg vs Chil
+                        Arg vs Ita
                     </h1>
 
                 </div>
@@ -104,6 +96,7 @@
                     <p><b>watch now Argentina vs Chile</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -114,7 +107,7 @@
             <!-- cards -->
             <div class="cards">
                 <div class="image">
-                    <img src="images/rsz_japan.jpg" alt="">
+                    <img src="images/kor 2.jpg" alt="">
 
                 </div>
                 <div class="title">
@@ -127,6 +120,7 @@
                     <p><b>watch now Japan vs Korea</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -136,7 +130,7 @@
             <!-- cards -->
             <div class="cards">
                 <div class="image">
-                    <img src="images/france.jpg" alt="">
+                    <img src="images/spa2.jpg" alt="">
 
                 </div>
                 <div class="title">
@@ -149,6 +143,7 @@
                     <p><b>watch now France vs Spain</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -158,7 +153,7 @@
             <!-- cards -->
             <div class="cards">
                 <div class="image">
-                    <img src="images/pre.jpg" alt="">
+                    <img src="images/talk2.jpg" alt="">
 
                 </div>
                 <div class="title">
@@ -171,6 +166,7 @@
                     <p><b>watch now Talk Show</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
 
                 </div>
@@ -181,7 +177,7 @@
             <!-- cards -->
             <div class="cards">
                 <div class="image">
-                    <img src="images/rsz_goal.jpg" alt="">
+                    <img src="images/prev2.jpg" alt="">
 
                 </div>
                 <div class="title">
@@ -194,8 +190,8 @@
                     <p><b>watch now Goal Reviews</b></p>
                     <button class="link1">
                         watch now
+                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
                     </button>
-
                 </div>
 
             </div>
