--- a/assignment2.html
+++ b/assignment2.html
@@ -2,243 +2,148 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World cup</title>
-    <script src="https://kit.fontawesome.com/4eee2a31ad.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2e30e07046.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="23.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <title>World Cup</title>
 </head>
 
 <body>
+    <!-- -------
+    Top banner start
+    ----------- -->
+    <header>
+        <div style="margin-bottom:100px ;" class="top-banner">
+            <div class="top-info">
+                <div class="title">
+                    <h2>The Greatest show on the earth</h2>
+                </div>
 
-    <section class="two">
-        <div class="one">
-            <h1 style="padding-left:20px"><b>Greatest Show</b> </h1>
-            <h1 style="padding-left:20px">On The </h1>
-            <h1 style="padding-left:20px">Earth!!</h1>
-            <p style="margin-bottom:10%;padding-left:20px ;">The FIFA World Cup is the most watched tournament in
-                football (soccer). The
-                Fédération Internationale de
-                Football Association (FIFA) organises the World Cup every four years. More people watch the World Cup
-                finals
-                than any other sporting event in the world—even more people than the Olympic Games.[source?]The most
-                successful team has been Brazil because they have won the competition 5 times.</p>
-
-            <a style="margin-left:10px;margin-bottom: 20px;" class="link1" target="_blank"
-                href="https://www.livesoccertv.com/competitions/international/world-cup/">Watch Live
-                <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-            </a>
-
+                <p>The FIFA World Cup, often simply called the World Cup, <br> is an international association football
+                    competition contested <br> by the senior men's national teams of the members of the Fédération</p>
+                <br>
+                <a href="">Watch live <i class="fa-solid fa-angle-right"></i> </a>
+            </div>
+            <div class="top-image">
+                <img src="images/my-bg2.png" alt="">
+            </div>
         </div>
-        <div class="one">
-            <img src="images/my-bg2.png" alt="cr7">
+    </header>
+    <!-- -----------
+    top banner ended
+     ------------>
+    <!-- blog part start-------- -->
+    <main>
+        <section class="second-part">
+            <div class="menu">
+                <div class="buttons">
+                    <a class="button" href="website2.html">Upcoming Match</a>
+                    <a class="button" href="">All</a>
+                    <a class="button button-red" href="">Blogs</a>
+                </div>
+            </div>
+            <div class="blogs">
+                <div class="blog">
+                    <img src="images/bra.jpg" alt=""><br>
+                    <div class="blog-info">
+                        <a href="">Watch Now</a> <br>
+                        <h3>Match Live : Brazil vs Portugal</h3> <br>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>10h </p>
+                        <i class="fa-solid fa-message"></i>
+                        <p>23</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/arg.png" alt=""><br>
+                    <div class="blog-info">
+                        <a href="">Watch Now</a> <br>
+                        <h3>Match Live : Argentina vs Chile <br>
+                        </h3> <br>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>10h </p>
+                        <i class="fa-solid fa-message"></i>
+                        <p>23</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/jap2.jpg" alt=""><br>
+                    <div class="blog-info">
+                        <a href="">Watch Now</a> <br>
+                        <h3>Match Live : Japan Vs Korea</h3> <br>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>10h </p>
+                        <i class="fa-solid fa-message"></i>
+                        <p>23</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="blog-info">
+                        <a href="">Watch Now</a> <br>
+                        <h3>Match Live : France vs Spain</h3> <br>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>10h </p>
+                        <i class="fa-solid fa-message"></i>
+                        <p>23</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/rsz_1pre.png" alt=""><br>
+                    <div class="blog-info">
+                        <a href="">Watch Now</a> <br>
+                        <h3>Match Live : Talk Show With Experts</h3> <br>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>10h </p>
+                        <i class="fa-solid fa-message"></i>
+                        <p>23</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="images/goals.jpg" alt=""><br>
+                    <div class="blog-info">
+                        <a href="">Watch Now</a> <br>
+                        <h3>Match Live : Goal Reviews Till Now</h3> <br>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>10h </p>
+                        <i class="fa-solid fa-message"></i>
+                        <p>23</p>
+                    </div>
+                </div>
+
+        </section>
+    </main>
+    <!-- blog part ended -->
+    <footer>
+        <div class="footer-title">
+
+            <h1>Goal</h1>
+
+        </div> <br> <br>
+        <div class="links">
+            <div class="link"><a href="">Contanct Us</a></div>
+            <div class="link"><a href="">Terms of Service </a></div>
+            <div class="link"><a href="">Privacy Policy</a></div>
+            <div class="link"><a href="">Privacy Settings </a></div>
+            <div class="link"><a href="">Goal App</a></div>
+            <div class="link"><a href="">Goal Live</a></div>
         </div>
-    </section>
-
-
-
-    <div class="box">
-        <div class="container">
-            <div class="not">
-                <button class="but">Match
-                </button>
-                <BUTton class="but"> Score</BUTton>
-                <BUTton style="background-color: red; color:black;" class="but">Blogs</BUTton>
-            </div>
-
+        <div class="social-link">
+            <div class="social"><a href="https://www.facebook.com/shariarrahman6666"><i
+                        class="fa-brands fa-facebook"></i></a></div>
+            <div class="social"><a href="https://www.instagram.com/shariar_bruh/"><i
+                        class="fa-brands fa-instagram"></i></a></div>
+            <div class="social"><a href="https://www.linkedin.com/in/shariar-rahman-6a4270244/"><i
+                        class="fa-brands fa-linkedin"></i></a></div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-        <div class="main">
-
-            <div class="cards">
-                <div class="image">
-                    <img src="images/brazil.jpg" alt="">
-
-                </div>
-                <div class="title">
-                    <h1>
-                        Bra vs Por
-                    </h1>
-
-                </div>
-                <div class="des">
-                    <p><b>watch now Brazil vs Portugal</b></p>
-                    <button class="link1">
-                        watch now
-                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-                    </button>
-
-                </div>
-
-            </div>
-
-
-
-            <!-- cards -->
-            <div class="cards">
-                <div class="image">
-                    <img src="images/rsz_chile.jpg" alt="">
-
-                </div>
-                <div class="title">
-                    <h1>
-                        Arg vs Chil
-                    </h1>
-
-                </div>
-                <div class="des">
-                    <p><b>watch now Argentina vs Chile</b></p>
-                    <button class="link1">
-                        watch now
-                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-                    </button>
-
-                </div>
-
-            </div>
-
-
-            <!-- cards -->
-            <div class="cards">
-                <div class="image">
-                    <img src="images/rsz_japan.jpg" alt="">
-
-                </div>
-                <div class="title">
-                    <h1>
-                        Jap vs Kor
-                    </h1>
-
-                </div>
-                <div class="des">
-                    <p><b>watch now Japan vs Korea</b></p>
-                    <button class="link1">
-                        watch now
-                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-                    </button>
-                </div>
-
-            </div>
-
-            <!-- cards -->
-            <div class="cards">
-                <div class="image">
-                    <img src="images/france.jpg" alt="">
-
-                </div>
-                <div class="title">
-                    <h1>
-                        Fra vs Spa
-                    </h1>
-
-                </div>
-                <div class="des">
-                    <p><b>watch now France vs Spain</b></p>
-                    <button class="link1">
-                        watch now
-                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-                    </button>
-
-                </div>
-
-            </div>
-
-            <!-- cards -->
-            <div class="cards">
-                <div class="image">
-                    <img src="images/pre.jpg" alt="">
-
-                </div>
-                <div class="title">
-                    <h1>
-                        Talk Show
-                    </h1>
-
-                </div>
-                <div class="des">
-                    <p><b>watch now Talk Show</b></p>
-                    <button class="link1">
-                        watch now
-                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-                    </button>
-
-                </div>
-
-            </div>
-
-
-            <!-- cards -->
-            <div class="cards">
-                <div class="image">
-                    <img src="images/rsz_goal.jpg" alt="">
-
-                </div>
-                <div class="title">
-                    <h1>
-                        Goal Review
-                    </h1>
-
-                </div>
-                <div class="des">
-                    <p><b>watch now Goal Reviews</b></p>
-                    <button class="link1">
-                        watch now
-                        <i style="padding-left:10px ;" class="fa-solid fa-tv"></i>
-                    </button>
-                </div>
-
-            </div>
-            </section>
-
-
-
-        </div>
-    </div>
-
+    </footer>
 
 </body>
-
-<footer style="background-color:black;margin-top:100px ;">
-    <h1 style="text-align:center
-     ; color: white;">
-        Goal.com
-    </h1>
-    <hr style="margin-top: 10px; color: gray;width: 45%;margin-left:405px ;">
-    <section class="gg">
-        <div class="gg1">
-            <p style="color:white ;">Contact us</p>
-        </div>
-        <div class="gg1">
-            <p style="color:white ;">Help Line</p>
-        </div>
-
-        <div class="gg1">
-            <p style="color:white ;">Review</p>
-        </div>
-
-        <div class="gg1">
-            <p style="color:white ;">Goals</p>
-        </div>
-
-
-
-
-</footer>
-
 
 </html>
