--- a/website2.html
+++ b/website2.html
@@ -31,7 +31,7 @@
                 <a href="">Watch live <i class="fa-solid fa-angle-right"></i> </a>
             </div>
             <div class="top-image">
-                <img src="assets/Banner Image.png" alt="">
+                <img src="images/my-bg2.png" alt="">
             </div>
         </div>
     </header>
@@ -51,11 +51,13 @@
             <div class="matchs">
                 <div class="match">
                     <div class="match-img">
-                        <div class="match-top-part"> <img src="assets/germany Flag.png" alt=""> </div>
+                        <div class="match-top-part">
+                            <img src="images/germany Flag.png" alt="">
+                        </div>
                         <div class="match-top-part">
                             <p>vs</p>
                         </div>
-                        <div class="match-top-part"> <img src="assets/Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/Flag.png" alt=""> </div>
                     </div>
                     <div class="match-info">
                         <h2>Germany VS France </h2>
@@ -64,11 +66,11 @@
                 </div>
                 <div class="match">
                     <div class="match-img">
-                        <div class="match-top-part"> <img src="assets/germany Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/germany Flag.png" alt=""> </div>
                         <div class="match-top-part">
                             <p>vs</p>
                         </div>
-                        <div class="match-top-part"> <img src="assets/Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/Flag.png" alt=""> </div>
                     </div>
                     <div class="match-info">
                         <h2>Germany VS France </h2>
@@ -77,11 +79,11 @@
                 </div>
                 <div class="match">
                     <div class="match-img">
-                        <div class="match-top-part"> <img src="assets/germany Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/germany Flag.png" alt=""> </div>
                         <div class="match-top-part">
                             <p>vs</p>
                         </div>
-                        <div class="match-top-part"> <img src="assets/Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/Flag.png" alt=""> </div>
                     </div>
                     <div class="match-info">
                         <h2>Germany VS France </h2>
@@ -90,11 +92,11 @@
                 </div>
                 <div class="match">
                     <div class="match-img">
-                        <div class="match-top-part"> <img src="assets/germany Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/germany Flag.png" alt=""> </div>
                         <div class="match-top-part">
                             <p>vs</p>
                         </div>
-                        <div class="match-top-part"> <img src="assets/Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/Flag.png" alt=""> </div>
                     </div>
                     <div class="match-info">
                         <h2>Germany VS France </h2>
@@ -103,11 +105,11 @@
                 </div>
                 <div class="match">
                     <div class="match-img">
-                        <div class="match-top-part"> <img src="assets/germany Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/germany Flag.png" alt=""> </div>
                         <div class="match-top-part">
                             <p>vs</p>
                         </div>
-                        <div class="match-top-part"> <img src="assets/Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/Flag.png" alt=""> </div>
                     </div>
                     <div class="match-info">
                         <h2>Germany VS France </h2>
@@ -116,11 +118,11 @@
                 </div>
                 <div class="match">
                     <div class="match-img">
-                        <div class="match-top-part"> <img src="assets/germany Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/germany Flag.png" alt=""> </div>
                         <div class="match-top-part">
                             <p>vs</p>
                         </div>
-                        <div class="match-top-part"> <img src="assets/Flag.png" alt=""> </div>
+                        <div class="match-top-part"> <img src="images/Flag.png" alt=""> </div>
                     </div>
                     <div class="match-info">
                         <h2>Germany VS France </h2>
