--- a/assignment2.html
+++ b/assignment2.html
@@ -53,7 +53,8 @@
                     <img src="images/bra.jpg" alt=""><br>
                     <div class="blog-info">
                         <a href="">Watch Now</a> <br>
-                        <h3>Match Live : Brazil vs Portugal</h3> <br>
+                        <h3>Match Live : Brazil vs Portugal</h3>
+                        <br>
                         <i class="fa-solid fa-clock"></i>
                         <p>10h </p>
                         <i class="fa-solid fa-message"></i>
